--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,19 @@
     <title>Air Traffic Collision Scenario</title>
     <link rel="stylesheet" type="text/css" href="../src/index.css" />
   </head>
-  <body onload="startGame()">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <canvas id="myCanvas" width="1000" height="600"></canvas>
     <script src="../src/index.js"></script>
+    <div>
+      <button onclick="remove1()">1</button>
+      <button onclick="remove2()">2</button>
+      <button onclick="remove3()">3</button>
+      <button onclick="remove4()">4</button>
+      <button onclick="remove5()">5</button>
+      <button onclick="remove6()">6</button>
+      <button onclick="remove7()">7</button>
+      <button onclick="remove8()">8</button>
+    </div>
   </body>
 </html>
