Refactored to use React components & quiz functionality added

--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Air Traffic Collision Scenario" />
-
     <title>Air Traffic Collision Scenario</title>
-    <link rel="stylesheet" type="text/css" href="../src/index.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <canvas id="myCanvas" width="1000" height="600"></canvas>
-    <script src="../src/index.js"></script>
-    <div>
-      <button onclick="remove1()">1</button>
-      <button onclick="remove2()">2</button>
-      <button onclick="remove3()">3</button>
-      <button onclick="remove4()">4</button>
-      <button onclick="remove5()">5</button>
-      <button onclick="remove6()">6</button>
-      <button onclick="remove7()">7</button>
-      <button onclick="remove8()">8</button>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
