--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Air Traffic Collision Scenario" />
     <title>Air Traffic Collision Scenario</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
