--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Air Traffic Collision Scenario" />
     <title>Air Traffic Collision Scenario</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
