--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Air Traffic Collision Scenario" />
-    <title>Air Traffic Collision Scenario</title>
+    <title>Air Traffic Skills Assessment (ATSA) Practice Activities</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@500;700;900&display=swap"
       rel="stylesheet"
